tests/paczka1/small_fuzzy/91364122.err
Error in line 6: tKd S694 59,2
Error in line 9: tKd A106 45,7
